<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="5dp" >

        <!-- Can cross? -->

        <TextView
            android:id="@+id/TV_can_cross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/can_cross" />

        <RadioGroup
            android:id="@+id/RBG_Cross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/RB_Cross_Bridge"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/bridge" />

            <RadioButton
                android:id="@+id/RB_Cross_Barrier"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/barrier" />

            <RadioButton
                android:id="@+id/RB_Cross_Both"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/both" />
        </RadioGroup>

        <TextView
            android:id="@+id/TV_pick_up_balls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_up_balls" />

        <RadioGroup
            android:id="@+id/RBG_Pick_Ball"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/RB_Pick_Ball_Feeder"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/from_feeder" />

            <RadioButton
                android:id="@+id/RB_Pick_Ball_Floor"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/from_floor" />

            <RadioButton
                android:id="@+id/RB_Pick_Ball_Both"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/both" />
        </RadioGroup>

        <!-- Speed? -->

        <TextView
            android:id="@+id/TV_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed" />

        <RadioGroup
            android:id="@+id/RBG_Speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/RB_Speed_Pr"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/STR_Pr" />

            <RadioButton
                android:id="@+id/RB_Speed_Fr"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/STR_Fr" />

            <RadioButton
                android:id="@+id/RB_Speed_Gd"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/STR_Gd" />

            <RadioButton
                android:id="@+id/RB_Speed_Ex"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/STR_Ex" />
        </RadioGroup>

        <!-- Agility? -->

        <TextView
            android:id="@+id/TV_agility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agility" />

        <RadioGroup
            android:id="@+id/RBG_Agility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/RB_Agility_Pr"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/STR_Pr" />

            <RadioButton
                android:id="@+id/RB_Agility_Fr"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/STR_Fr" />

            <RadioButton
                android:id="@+id/RB_Agility_Gd"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/STR_Gd" />

            <RadioButton
                android:id="@+id/RB_Agility_Ex"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/STR_Ex" />
        </RadioGroup>

        <!-- Strategy? -->

        <TextView
            android:id="@+id/TV_strategy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strategy" />

        <RadioGroup
            android:id="@+id/RBG_Strategy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/RB_Strategy_Offensive"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/STR_Offensive" />

            <RadioButton
                android:id="@+id/RB_Strategy_Defensive"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/STR_Defensive" />

            <RadioButton
                android:id="@+id/RB_Strategy_Neutral"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/neutral" />
        </RadioGroup>

        <!-- Penalty Risk? -->

        <TextView
            android:id="@+id/TV_penalty_risk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/penalty_risk" />

        <RadioGroup
            android:id="@+id/RBG_Penalty_Risk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/RB_Penalty_Risk_Low"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/STR_Low" />

            <RadioButton
                android:id="@+id/RB_Penalty_Risk_Med"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/STR_Med" />

            <RadioButton
                android:id="@+id/RB_Penalty_Risk_High"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/STR_High" />
        </RadioGroup>

        <!-- Can balance? -->

        <TextView
            android:id="@+id/TV_can_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/can_balance" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ToggleButton
                android:id="@+id/TBT_Balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickHandler"
                android:textOff="@string/no"
                android:textOn="@string/yes" />

            <RadioGroup
                android:id="@+id/RBG_Balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/RB_Balance_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:state_enabled="false"
                    android:text="@string/one" />

                <RadioButton
                    android:id="@+id/RB_Balance_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:state_enabled="false"
                    android:text="@string/two" />

                <RadioButton
                    android:id="@+id/RB_Balance_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:state_enabled="false"
                    android:text="@string/three" />
            </RadioGroup>
        </LinearLayout>

        <!-- Red or blue alliance? -->

        <TextView
            android:id="@+id/TV_which_alliance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/which_alliance" />

        <RadioGroup
            android:id="@+id/RBG_which_alliance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/RB_alliance_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue" />

            <RadioButton
                android:id="@+id/RB_alliance_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red" />
        </RadioGroup>

        <!-- Win/lose match? -->

        <TextView
            android:id="@+id/TV_win_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/win_match" />

        <RadioGroup
            android:id="@+id/RBG_win_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/RB_match_win"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/win" />

            <RadioButton
                android:id="@+id/RB_match_loss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loss" />
        </RadioGroup>

        <!-- Final score? -->

        <TextView
            android:id="@+id/TV_final_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/final_score" />

        <EditText
            android:id="@+id/ET_final_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/score"
            android:inputType="number"
            android:maxLength="4"
            android:selectAllOnFocus="true"
            android:textSize="20sp" />

        <!-- Comment -->
        <!--
        <EditText
            android:id="@+id/ET_Comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/TV_General_Sub"
            android:layout_below="@id/TBT_Balance"
            android:layout_marginTop="20dp"
            android:hint="@string/comment"
            android:textSize="20sp" />
        -->
    </LinearLayout>

</ScrollView>