<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >   
	<item android:id="@+id/bt_save" 
   		  android:title="@string/save"
          android:showAsAction="ifRoom|withText" 
          android:icon="@drawable/ic_checkmark_holo_light"/> 
    <item android:id="@+id/bt_cancel" 
          android:title="@string/cancel" 
          android:showAsAction="ifRoom|withText" />
    <!-- <item android:id="@+id/edit_match_number"
          android:title="@string/menu_change_match"
          android:showAsAction="never" /> -->
    <item android:id="@+id/load_match"
          android:title="@string/menu_load_match"
          android:showAsAction="never" />
    <item android:id="@+id/clear_data"
          android:title="@string/menu_clear_data"
          android:showAsAction="never" />   
</menu>