<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/Team_Input_Screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:focusable="true"
    	android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/IV_Team_Picture"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/picture_frame_small"
                android:onClick="onPhotoClick"
                android:scaleType="fitXY"
                android:src="@drawable/ic_contact_picture"
                android:contentDescription="@string/team_photo_content_description"/>

            <!-- android:background="@drawable/picture_frame_small" -->

            <EditText
                android:id="@+id/ET_Team_Rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/IV_Team_Picture"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/IV_Team_Picture"
                android:hint="@string/rank"
                android:inputType="number"
                android:maxLength="4"
                android:maxLines="1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ET_Team_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/ET_Team_Rank"
                
                android:layout_alignLeft="@id/ET_Team_Rank"
                android:hint="@string/team_name"
                android:inputType="text|textCapSentences"
                android:maxLines="1"
                android:textSize="20sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/TV_Drive"
            style="@style/team_input_main_header"
            android:text="@string/drive" />

        <Spinner
            android:id="@+id/SP_Drive"
            style="@style/team_input_main_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/drive_option" />

        <TextView
            android:id="@+id/TV_Wheel"
            style="@style/team_input_main_header"
            android:text="@string/wheel" />

        <Spinner
            android:id="@+id/SP_Wheel"
            style="@style/team_input_main_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/wheel_option" />



        <TextView
            android:id="@+id/TV_Position"
            style="@style/team_input_main_header"
            android:text="@string/prefer_position" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/team_input_main_view"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/CB_Left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left" />

            <CheckBox
                android:id="@+id/CB_Middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/middle" />

            <CheckBox
                android:id="@+id/CB_Right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right" />
        </LinearLayout>

        <TextView
            android:id="@+id/TV_Shoot_From_Where"
            style="@style/team_input_main_header"
            android:text="@string/shoot_from_where" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/team_input_main_view"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/CB_Fender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fender" />

            <CheckBox
                android:id="@+id/CB_Key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/key" />

            <CheckBox
                android:id="@+id/CB_Anywhere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anywhere" />
        </LinearLayout>
        
        <TextView
            android:id="@+id/TV_Team_Auto"
            style="@style/team_input_main_header"
            android:text="@string/play_auto" />

        <ToggleButton
            android:id="@+id/TBT_Team_Auto"
            style="@style/team_input_main_view"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
        
        <TextView
            android:id="@+id/TV_Team_Kinect"
            style="@style/team_input_main_header"
            android:text="@string/STR_Kinect" />

        <ToggleButton
            android:id="@+id/TBT_Team_Kinect"
            style="@style/team_input_main_view"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/TV_Team_Barrier"
            style="@style/team_input_main_header"
            android:text="@string/team_barrier" />

        <ToggleButton
            android:id="@+id/TBT_Team_Barrier"
            style="@style/team_input_main_view"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/TV_Team_Bridge"
            style="@style/team_input_main_header"
            android:text="@string/team_bridge" />

        <ToggleButton
            android:id="@+id/TBT_Team_Bridge"
            style="@style/team_input_main_view"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/TV_Team_Strategy"
            style="@style/team_input_main_header"
            android:text="@string/strategy" />

        <Spinner
            android:id="@+id/SP_Strategy"
            style="@style/team_input_main_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/strategy_option" />

        <TextView
            android:id="@+id/TV_Team_Comments"
            style="@style/team_input_main_header"
            android:text="@string/comment" />
        
        <EditText
            android:id="@+id/ET_Team_Comment"
            style="@style/team_input_main_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:hint="@string/comment"
            android:inputType="text|textCapSentences"
            android:scrollHorizontally="false" />
    </LinearLayout>

</ScrollView>